# bi-visual-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/analytics/: Dockerfile  pyproject.toml
apps/analytics/src/: config.py  main.py
apps/analytics/src/models/: schemas.py
apps/analytics/src/routers/: analysis.py  health.py
apps/analytics/src/services/: query_engine.py  statistical.py
apps/analytics/tests/: test_health.py
apps/api/: drizzle.config.ts  package.json  tsconfig.json
apps/api/src/: config.ts  index.ts  server.ts
apps/api/src/agents/: advisory-agent.ts  analytics-agent.ts  data-agent.ts  orchestrator.ts
apps/api/src/db/: index.ts  schema.ts
apps/api/src/middleware/: error-handler.ts  request-id.ts
apps/api/src/routes/: agents.ts  datasets.ts  health.ts  index.ts  query.ts
apps/api/src/services/: analytics-client.ts  dataset-store.ts  llm-adapter.ts  query-interpreter.ts  queue.ts  realtime-session.ts  realtime-tools.ts  storage.ts
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/hooks/: use-realtime.ts  use-voice.ts
apps/web/src/lib/: api-client.ts
apps/worker/: package.json  tsconfig.json
apps/worker/src/: config.ts  index.ts
apps/worker/src/lib/: redis.ts
apps/worker/src/processors/: analytics-pipeline.ts  data-pipeline.ts  (+1 more)
docker/: .dockerignore  Dockerfile.api  Dockerfile.web  Dockerfile.worker
test-data/: sample.csv  test.xlsx
(+19 files in other folders)
